--- a/web-object-detector/src/style/App.css
+++ b/web-object-detector/src/style/App.css
@@ -203,3 +203,32 @@ button:hover {
   border-radius: 50%;
   cursor: pointer;
 }
+
+
+.uploadInfo {
+  background-color: rgba(147, 209, 97, 0.8);
+  font-weight: bold;
+  color: #000;
+  padding: 10px;
+  border-radius: 5px;
+  z-index: 9999;
+  opacity: 0;
+  transition: opacity 2s cubic-bezier(.5, .1, .5, .9);
+}
+
+.uploadInfo.show {
+  opacity: 1;
+}
+
+.instructionHeader {
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 20px;
+  padding: 5px;
+}
+
+.instructionHeader:hover {
+  background-color: rgba(219, 204, 186, 0.7);
+}
